# projeto_final_fast_api

./: README.md  pyproject.toml
fast_api_madr/: app.py  database.py  models.py  schemas.py  security.py
fast_api_madr/routers/: account.py  auth.py
migrations/: env.py
migrations/versions/: 236c5bddfb17_create_accounts_table.py
tests/: conftest.py  test_account.py
